@@ -1,4 +1,5 @@
   - Escape special characters in user/role names
+  - Use the stored user credentials to look up roles
 
 1.014 26 April 2013
   - Don't fall back to unauthenticated bind when authenticating
